<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_elemento_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_elemento_id" />

    <Button
        android:text="@string/btnActualizarElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnActualizarElemento" />

    <Button
        android:text="@string/btnEliminarElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEliminarElemento" />

</LinearLayout>