<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_weight="0.58"
                android:hint="@string/editText2" />

            <Button
                android:text="@string/btnAnadirElemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAnadirElemento"
                android:layout_weight="0.58" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_miembro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:text="@string/et_carac_id" />

    <Button
        android:text="@string/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnActualizar" />

    <Button
        android:text="@string/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEliminar" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15.28"
            android:id="@+id/ListViewElemento" />
    </TableRow>


</LinearLayout>